changed body line

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>MY WEBSITE</title>
 </head>
 <body>
-<hi>Hi,I am santosh!</n1>
-</h1>body>
+<hi>Hi,I am santosh!from Amrita</n1>
+</h1>
 </body>
 </html>
